--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 asgiref==3.4.1
 certifi==2021.10.8
-charset-normalizer==2.0.7
+charset-normalizer==2.0.8
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.9
-django-rest-framework==0.1.0
-django-rest-swagger==2.2.0
+django-filter==21.1
 djangorestframework==3.12.4
 drf-yasg==1.20.0
 idna==3.3
@@ -13,7 +12,6 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.3
 MarkupSafe==2.0.1
-openapi-codec==1.3.2
 packaging==21.3
 Pillow==8.4.0
 psycopg2-binary==2.9.2
@@ -23,7 +21,6 @@ pytz==2021.3
 requests==2.26.0
 ruamel.yaml==0.17.17
 ruamel.yaml.clib==0.2.6
-simplejson==3.17.6
 six==1.16.0
 sqlparse==0.4.2
 transliterate==1.10.2
